--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 asgiref==3.7.2
 attrs==23.1.0
+certifi==2023.7.22
+charset-normalizer==3.3.0
 Django==4.2.6
 django-filter==23.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-spectacular==0.26.5
+Faker==19.11.0
 flake8==6.1.0
 flake8-variables-names==0.0.6
+idna==3.4
 inflection==0.5.1
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
@@ -16,11 +20,15 @@ pep8-naming==0.13.3
 pycodestyle==2.11.1
 pyflakes==3.1.0
 PyJWT==2.8.0
+python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
 referencing==0.30.2
+requests==2.31.0
 rpds-py==0.10.6
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
 tzdata==2023.3
 uritemplate==4.1.1
+urllib3==2.0.7
